--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
-# subdirectories with builds and working material
-/__doc-src/
-/backup/
-/lib/
-/venv/
+.venv/
 
-# executables and (unnecessary) project files
-*.lpi
-*.lps
-*.exe
+obj/
+bin/
